# Temp

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
configs/: cfg.yaml
scripts/: train.py
src/temp/utils/: __init__.py  utils.py
tests/: test_placeholder.py
