[project]
name = "temp" # 建立新專案時再修改
version = "0.1.0"
description = "A professional deep learning research template with uv and DevContainer."
readme = "README.md"
requires-python = "==3.10.*"
license = {text = "MIT"}
# 這裡是你的核心依賴，放最通用的
dependencies = [
    "torch==2.4.1+cu121",
    "torchvision==0.19.1+cu121",
    "torchaudio==2.4.1+cu121",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 強制使用專業的 src 佈局
[tool.hatch.build.targets.wheel]
packages = ["src/temp"]

# 代碼格式檢查配置 (Ruff)
[tool.ruff]
line-length = 88
target-version = "py310"